--- a/activities/climate_starter.ipynb
+++ b/activities/climate_starter.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "# create engine to hawaii.sqlite\n",
-    "engine = create_engine(\"sqlite:///./Resources/hawaii.sqlite\")"
+    "engine = create_engine(\"sqlite:///./Resources/hawaii.sqlite\")\n"
    ]
   },
   {
@@ -1278,11 +1278,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bonus Challenge\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calc_temps(start_date, end_date):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
